welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: not found: value aA
	aA = Math.abs(a - 10)
        ^close10:3: error: not found: value bB
	bB = Math.abs(b - 10)
        ^close10:4: error: not found: value aA
	if ( aA < bB ) {
             ^close10:5: error: not found: value aA
		return aA;
                       ^close10:7: error: not found: value bB
	if ( bB < aA ) {
             ^close10:8: error: not found: value bB
		return bB;
                       ^close10:10: error: not found: value aA
	if ( aA == bB) {
             ^close10:10: error: type mismatch;
 found   : Unit
 required: Int
	if ( aA == bB) {
        ^