welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
	aA = Math.abs(a - 10)
	bB = Math.abs(b - 10)
	if ( aA < bB ) {
		return aA;
	}
	if ( bB < aA ) {
		return bB;
	}
	if ( aA == bB) {
		return 0;
	}
}